# taming_transformer

./: .gitignore  README.md  mnist_launch.sh  pyproject.toml  train_cond_prior.py  train_vqgan.py
taming_transformer/: __init__.py  misc.py
taming_transformer/models/: __init__.py  decoder.py  discriminator.py  encoder.py  modules.py  perceptual_loss.py  quantizer.py  transformer.py  vq_gan.py
titanic/taming_transformer/: __init__.py
